--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,10 @@
     "types": [
       "@adonisjs/core",
       "@adonisjs/repl",
-      "@japa/preset-adonis/build/adonis-typings"
+      "@japa/preset-adonis/build/adonis-typings",
+      "@adonisjs/auth",
+      "adonis5-jwt",
+      "@adonisjs/lucid"
     ]
   }
 }
