--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,11 @@
 {
   "tabWidth": 2,
-  "semi": true,
+  "useTabs": false,
   "singleQuote": true,
-  "jsxSingleQuote": true,
-  "bracketSpacing": true
+  "semi": true,
+  "bracketSpacing": true,
+  "arrowParens": "avoid",
+  "trailingComma": "es5",
+  "bracketSameLine": true,
+  "printWidth": 80
 }
