--- a/package.json
+++ b/package.json
@@ -13,9 +13,18 @@
     "@japa/runner": "^2.4.0",
     "@types/proxy-addr": "^2.0.0",
     "@types/source-map-support": "^0.5.6",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
     "adonis-preset-ts": "^2.1.0",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
     "pino-pretty": "^9.2.0",
-    "typescript": "~4.6",
+    "prettier": "2.8.4",
+    "typescript": "^4.9.5",
     "youch": "^3.2.3",
     "youch-terminal": "^2.2.0"
   },
