fix: remove strict-boolean-expressions eslint rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
     "sourceType": "module"
   },
   "rules": {
+    "@typescript-eslint/strict-boolean-expressions": "off",
     "@typescript-eslint/naming-convention": "off"
   }
 }
